--- a/src/app/page1/page1.page.html
+++ b/src/app/page1/page1.page.html
@@ -4,30 +4,23 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">page1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title>Connecting DB</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
   <ion-list>
-    <ion-item>
-      <ion-input label="Default input"></ion-input>
-    </ion-item>
+    <ion-item-sliding *ngFor="let item of datalist">
+      <ion-item>
+        <ion-label>{{ item.name }}</ion-label>
+      </ion-item>
 
-
-
-    <ion-item>
-      <ion-input [(ngModel)]=UserData.textin label="Text input" placeholder="Enter text" value=""></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-input [(ngModel)]=UserData.numin label="Number input" placeholder="000"></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-input [(ngModel)]=UserData.pwdin label="Password input" type="password" value="password" ></ion-input>
-    </ion-item>
-
-    <ion-button expand="block" (click)="gopage2()">Submit</ion-button>
+      <ion-item-options>
+        <ion-item-option>Edit</ion-item-option>
+        <ion-item-option color="danger">Delete</ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
+</ion-content>
